<resources>
    <string name="app_name">Ultimate Cards Football</string>
    <string name="btn_hecho">Done</string>
	<string name="btn_logout_from_google">Logout from Google</string>	
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="btn_select_team">Selecciona jugadores</string>
    <string name="btn_start_match">Play match</string>
    <string name="nick">nick</string>
    <string name="status">status</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="sign_out">Sign Out</string>
    <string name="quick_match">Quick match</string>
	<string name="app_id">350348549275-g4c5hjbannnjvp06r0g2nv4v2ltiu0rd.apps.googleusercontent.com</string>
</resources>
